Update CenterLocatorPage.java
centersList is properly initialized and populated before calling get(0)